Tested VPG on simple envs, also setup experiment for pong with vpg

--- a/rlalgs/tester/benchmarks.yaml
+++ b/rlalgs/tester/benchmarks.yaml
@@ -17,6 +17,9 @@ envs:
   CarRacing-v0:
     trials: 100
     reward: 900.0
+  FrozenLake-v0:
+    trials: 100
+    reward: 0.78
   FrozenLake8x8-v0:
     trials: 100
-    reward: 1
+    reward: 0.99
